--- a/Machine Learning/intro.ipynb
+++ b/Machine Learning/intro.ipynb
@@ -271,15 +271,15 @@
    "source": [
     "The Scikit-Learn API is designed with the following guiding principles in mind, as outlined in the Scikit-Learn API paper:\n",
     "\n",
-    "-Consistency: All objects share a common interface drawn from a limited set of methods, with consistent documentation.\n",
+    "- Consistency: All objects share a common interface drawn from a limited set of methods, with consistent documentation.\n",
     "\n",
-    "-Inspection: All specified parameter values are exposed as public attributes.\n",
+    "- Inspection: All specified parameter values are exposed as public attributes.\n",
     "\n",
-    "-Limited object hierarchy: Only algorithms are represented by Python classes; datasets are represented in standard formats (NumPy arrays, Pandas DataFrame objects, SciPy sparse matrices) and parameter names use standard Python strings.\n",
+    "- Limited object hierarchy: Only algorithms are represented by Python classes; datasets are represented in standard formats (NumPy arrays, Pandas DataFrame objects, SciPy sparse matrices) and parameter names use standard Python strings.\n",
     "\n",
-    "-Composition: Many machine learning tasks can be expressed as sequences of more fundamental algorithms, and Scikit-Learn makes use of this wherever possible.\n",
+    "- Composition: Many machine learning tasks can be expressed as sequences of more fundamental algorithms, and Scikit-Learn makes use of this wherever possible.\n",
     "\n",
-    "S-ensible defaults: When models require user-specified parameters, the library defines an appropriate default value.\n",
+    "- Sensible defaults: When models require user-specified parameters, the library defines an appropriate default value.\n",
     "\n",
     "In practice, these principles make Scikit-Learn very easy to use, once the basic principles are understood. Every machine learning algorithm in Scikit-Learn is implemented via the Estimator API, which provides a consistent interface for a wide range of machine learning applications."
    ]
