--- a/Machine Learning/MAGIC.ipynb
+++ b/Machine Learning/MAGIC.ipynb
@@ -540,6 +540,58 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Logistic Regression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.linear_model import LogisticRegression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lg_model = LogisticRegression()\n",
+    "lg_model = lg_model.fit(x_train,y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.68      0.72      0.70      1324\n",
+      "           1       0.85      0.82      0.83      2480\n",
+      "\n",
+      "    accuracy                           0.78      3804\n",
+      "   macro avg       0.76      0.77      0.76      3804\n",
+      "weighted avg       0.79      0.78      0.78      3804\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "y_pred = lg_model.predict(x_test)\n",
+    "print(classification_report(y_test,y_pred))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
