--- a/Machine Learning/MAGIC.ipynb
+++ b/Machine Learning/MAGIC.ipynb
@@ -481,6 +481,46 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Neural Networks\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From c:\\Users\\Thorne\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\keras\\src\\losses.py:2976: The name tf.losses.sparse_softmax_cross_entropy is deprecated. Please use tf.compat.v1.losses.sparse_softmax_cross_entropy instead.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import tensorflow as tf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nn_model = tf.keras.Sequential([\n",
+    "    tf.keras.layers.Dense(32, activation=\"relu\", input_shape=(10,)),\n",
+    "    tf.keras.layers.Dense(32, activation=\"relu\"),\n",
+    "    tf.keras.layers.Dense(1, activation=\"sigmoid\")\n",
+    "])\n",
+    "\n",
+    "nn_model.compile(optimizer=tf.keras.optimizers.Adam(0.001))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
