--- a/Machine Learning/Tensorflow/Learning Algorithms.ipynb
+++ b/Machine Learning/Tensorflow/Learning Algorithms.ipynb
@@ -1155,10 +1155,114 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Hidden Markov Model\n",
+    "Uses probability to predict future occurences. Makes use of the states, transitions, observations\n",
+    "\n",
+    "- States: In each markov model we have a finite set of states. These states could be something like \"warm\" and \"cold\" or \"high\" and \"low\" or even \"red\", \"green\" and \"blue\". These states are \"hidden\" within the model, which means we do not direcly observe them.\n",
+    "\n",
+    "- Observations: Each state has a particular outcome or observation associated with it based on a probability distribution. An example of this is the following: On a hot day Tim has a 80% chance of being happy and a 20% chance of being sad.\n",
+    "\n",
+    "- Transitions: Each state will have a probability defining the likelyhood of transitioning to a different state. An example is the following: a cold day has a 30% chance of being followed by a hot day and a 70% chance of being follwed by another cold day."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "import tensorflow_probability as tfp  # We are using a different module from tensorflow this time\n",
+    "import tensorflow as tf"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Weather Model\n",
+    "Taken direclty from the TensorFlow documentation (https://www.tensorflow.org/probability/api_docs/python/tfp/distributions/HiddenMarkovModel). \n",
+    "\n",
+    "We will model a simple weather system and try to predict the temperature on each day given the following information.\n",
+    "1. Cold days are encoded by a 0 and hot days are encoded by a 1.\n",
+    "2. The first day in our sequence has an 80% chance of being cold.\n",
+    "3. A cold day has a 30% chance of being followed by a hot day.\n",
+    "4. A hot day has a 20% chance of being followed by a cold day.\n",
+    "5. On each day the temperature is\n",
+    " normally distributed with mean and standard deviation 0 and 5 on\n",
+    " a cold day and mean and standard deviation 15 and 10 on a hot day.\n",
+    "\n",
+    "If you're unfamiliar with **standard deviation** it can be put simply as the range of expected values. \n",
+    "\n",
+    "In this example, on a hot day the average temperature is 15 and ranges from 5 to 25.\n",
+    "\n",
+    "To model this in TensorFlow we will do the following.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dist =tfp.distributions\n",
+    "initial_dist = dist.Categorical(probs=[0.2,0.8]) # States\n",
+    "transition_dist = dist.Categorical(probs=[[0.7, 0.3],\n",
+    "                                          [0.2, 0.8]]) # Transitions\n",
+    "\n",
+    "observation_distribution = dist.Normal(loc=[0., 15.], scale=[5., 10.]) # Observations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Model \n",
+    "model = dist.HiddenMarkovModel(\n",
+    "    initial_distribution=initial_dist,\n",
+    "    transition_distribution=transition_dist,\n",
+    "    observation_distribution=observation_distribution,\n",
+    "    num_steps=7)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[11.999999 10.500001  9.75      9.375     9.1875    9.09375   9.046875]\n"
+     ]
+    }
+   ],
+   "source": [
+    "mean = model.mean()\n",
+    "\n",
+    "# due to the way TensorFlow works on a lower level we need to evaluate part of the graph\n",
+    "# from within a session to see the value of this tensor\n",
+    "\n",
+    "# in the new version of tensorflow we need to use tf.compat.v1.Session() rather than just tf.Session()\n",
+    "with tf.compat.v1.Session() as sess:  \n",
+    "  print(mean.numpy())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The prediction values do not change since they are normally calculated on probabilities and do not change upon re-running the model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
