--- a/Machine Learning/Tensorflow/cv.ipynb
+++ b/Machine Learning/Tensorflow/cv.ipynb
@@ -23,22 +23,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading data from https://www.cs.toronto.edu/~kriz/cifar-10-python.tar.gz\n",
-      "  3809280/170498071 [..............................] - ETA: 3:53:28"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#  LOAD AND SPLIT DATASET\n",
-    "(train_images, train_labels), (test_images, test_labels) = datasets.cifar10.load_data()\n",
-    "\n",
+    "(train_images, train_labels), (test_images, test_labels) = datasets.cifar10.load_data()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Normalize pixel values to be between 0 and 1\n",
     "train_images, test_images = train_images / 255.0, test_images / 255.0\n",
     "\n",
