--- a/Machine Learning/Tensorflow/cv.ipynb
+++ b/Machine Learning/Tensorflow/cv.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -79,6 +79,193 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "#### Building the convolutional base"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From c:\\Users\\Thorne\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\keras\\src\\backend.py:873: The name tf.get_default_graph is deprecated. Please use tf.compat.v1.get_default_graph instead.\n",
+      "\n",
+      "WARNING:tensorflow:From c:\\Users\\Thorne\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\keras\\src\\layers\\pooling\\max_pooling2d.py:161: The name tf.nn.max_pool is deprecated. Please use tf.nn.max_pool2d instead.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = models.Sequential()\n",
+    "model.add(layers.Conv2D(32, (3, 3), activation='relu', input_shape=(32, 32, 3)))\n",
+    "model.add(layers.MaxPooling2D((2, 2)))\n",
+    "model.add(layers.Conv2D(64, (3, 3), activation='relu'))\n",
+    "model.add(layers.MaxPooling2D((2, 2)))\n",
+    "model.add(layers.Conv2D(64, (3, 3), activation='relu'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " conv2d (Conv2D)             (None, 30, 30, 32)        896       \n",
+      "                                                                 \n",
+      " max_pooling2d (MaxPooling2  (None, 15, 15, 32)        0         \n",
+      " D)                                                              \n",
+      "                                                                 \n",
+      " conv2d_1 (Conv2D)           (None, 13, 13, 64)        18496     \n",
+      "                                                                 \n",
+      " max_pooling2d_1 (MaxPoolin  (None, 6, 6, 64)          0         \n",
+      " g2D)                                                            \n",
+      "                                                                 \n",
+      " conv2d_2 (Conv2D)           (None, 4, 4, 64)          36928     \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 56320 (220.00 KB)\n",
+      "Trainable params: 56320 (220.00 KB)\n",
+      "Non-trainable params: 0 (0.00 Byte)\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "model.summary()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Adding the dense layers\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.add(layers.Flatten())\n",
+    "model.add(layers.Dense(64, activation='relu'))\n",
+    "model.add(layers.Dense(10))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " conv2d (Conv2D)             (None, 30, 30, 32)        896       \n",
+      "                                                                 \n",
+      " max_pooling2d (MaxPooling2  (None, 15, 15, 32)        0         \n",
+      " D)                                                              \n",
+      "                                                                 \n",
+      " conv2d_1 (Conv2D)           (None, 13, 13, 64)        18496     \n",
+      "                                                                 \n",
+      " max_pooling2d_1 (MaxPoolin  (None, 6, 6, 64)          0         \n",
+      " g2D)                                                            \n",
+      "                                                                 \n",
+      " conv2d_2 (Conv2D)           (None, 4, 4, 64)          36928     \n",
+      "                                                                 \n",
+      " flatten (Flatten)           (None, 1024)              0         \n",
+      "                                                                 \n",
+      " dense (Dense)               (None, 64)                65600     \n",
+      "                                                                 \n",
+      " dense_1 (Dense)             (None, 10)                650       \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 122570 (478.79 KB)\n",
+      "Trainable params: 122570 (478.79 KB)\n",
+      "Non-trainable params: 0 (0.00 Byte)\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "model.summary()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Training and Evaluating the model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/4\n",
+      "1563/1563 [==============================] - 53s 32ms/step - loss: 1.0316 - accuracy: 0.6368 - val_loss: 1.0350 - val_accuracy: 0.6397\n",
+      "Epoch 2/4\n",
+      "1563/1563 [==============================] - 47s 30ms/step - loss: 0.9334 - accuracy: 0.6720 - val_loss: 0.9506 - val_accuracy: 0.6688\n",
+      "Epoch 3/4\n",
+      "1563/1563 [==============================] - 44s 28ms/step - loss: 0.8657 - accuracy: 0.6958 - val_loss: 0.8968 - val_accuracy: 0.6852\n",
+      "Epoch 4/4\n",
+      "1563/1563 [==============================] - 46s 29ms/step - loss: 0.8015 - accuracy: 0.7186 - val_loss: 0.9028 - val_accuracy: 0.6864\n"
+     ]
+    }
+   ],
+   "source": [
+    "model.compile(optimizer='adam',\n",
+    "              loss=tf.keras.losses.SparseCategoricalCrossentropy(from_logits=True),\n",
+    "              metrics=['accuracy'])\n",
+    "\n",
+    "history = model.fit(train_images, train_labels, epochs=4, \n",
+    "                    validation_data=(test_images, test_labels))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "313/313 - 2s - loss: 0.9028 - accuracy: 0.6864 - 2s/epoch - 7ms/step\n",
+      "0.6863999962806702\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_loss, test_acc = model.evaluate(test_images, test_labels,verbose=2)\n",
+    "print(test_acc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
